fixing readme and erasing comments